# PinnDE

./: .readthedocs.yaml  README.md  mkdocs.yml  pyproject.toml  test.py  testlegacy.py  testplot.py
SpecificTraining/BVP_Training/: ode_TrainingBVP_Hard.py
SpecificTraining/IVP_Training/: ode_Training2SystemIVP_soft.py  ode_TrainingIVP_Hard.py
docs/: InstallSetup.md  cite.md  cite2.md  index.md  team.md
docs/Legacy/: ode_ModelFuncs.md  ode_ParamChecks.md  ode_Plotters.md  ode_Points.md  ode_Solvers.md  ode_TimeSteppersDeepONet.md  ode_trainingSelect.md  pde_Boundaries_2var.md  pde_Initials.md  pde_ParamChecks.md  pde_Plotters.md  pde_Points.md  pde_Solvers.md  pde_trainingSelect_2var.md
docs/MainUserFunctions/: ode_Solvers.md  pde_Boundaries_2var.md  pde_Boundries_2var.md  pde_Initials.md  pde_Solvers.md
docs/ODE/: ode_ModelFuncs.md  ode_ParamChecks.md  ode_Plotters.md  ode_Points.md  ode_TimeSteppersDeepONet.md  ode_trainingSelect.md
docs/PDE/: pde_ParamChecks.md  pde_Plotters.md  pde_Points.md  pde_trainingSelect_2var.md
docs/adaptives/: RAD.md  RAR.md  RARD.md  adaptives.md
docs/boundaries/: boundaries.md  dirichlet.md  neumann.md  odeicbc.md  periodic.md
docs/data/: data.md  dondata.md  invpinndata.md  pinndata.md  timedondata.md  timeinvpinndata.md  timepinndata.md
docs/domain/: NEllipsoid.md  NRect.md  Time_NEllipsoid.md  Time_NRect.md  domain.md  timedomain.md
docs/initials/: initials.md
docs/models/: deeponet.md  invpinn.md  model.md  pinn.md
docs/plotters/: plotLosses.md  plotPinnPredictions.md
joss/: paper.md
src/pinnde/: __init__.py  (+5 more)
(+418 files in other folders)
