[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta" 

[project]
name = "pinnde"
version = "1.0.2"
dependencies = [
  "tensorflow >= 2.16.1",
  "numpy",
  "pyDOE",
  "matplotlib",
  "jax >= 0.4.28",
  "flax >= 0.8.4",
  "optax >= 0.2.2"

]
authors = [
  { name="Jason Matthews", email = "jbmatthews@mun.ca"},
]
description = "A library for solving differential equations with PINNs and DeepONets"
readme = "README.md"
license = {file = "LICENSE.txt"}
requires-python = ">=3.10.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
]
